--- a/Brainwriter/AndroidManifest.xml
+++ b/Brainwriter/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="org.foi.fmoed"
     android:versionCode="1"
     android:versionName="1.0" >
-
+ 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
