--- a/Brainwriter/bin/AndroidManifest.xml
+++ b/Brainwriter/bin/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.foi.fmoed.MainActivity"
+            android:name="org.foi.fmoed.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.foi.fmoed.IdeasActivity"
+            android:name="org.foi.fmoed.activities.IdeasActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
