CameraActivity implemented. Some states and events needs further code review.

--- a/Brainwriter/AndroidManifest.xml
+++ b/Brainwriter/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.foi.fmoed.MainActivity"
+            android:name="org.foi.fmoed.camera.CameraActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
