--- a/Brainwriter/AndroidManifest.xml
+++ b/Brainwriter/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="org.foi.fmoed"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
+    <uses-permission android:name="android.permission.SET_WALLPAPER" /> 
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -22,6 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="org.foi.fmoed.canvas.Drawer" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
     </application>
 
 </manifest>
