--- a/Brainwriter/bin/AndroidManifest.xml
+++ b/Brainwriter/bin/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name="org.foi.fmoed.activities.IdeasActivity"
             android:label="@string/app_name" >
         </activity>
+       	<activity
+            android:name="org.foi.fmoed.activities.FragmentDialogActivity">
+        </activity>
     </application>
 
 </manifest>
